site/assets/css/flexi_form_fields.css
/* ... */
#flexicontent .fc-xpended-btns > .fcfield-addvalue:not(.add-on):not(.input-group-addon):not(.btn):only-child {
	margin: 0;
}
#flexicontent .fc-xpended-btns .fcfield-expand-view:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-drag-handle:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-list-add:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-list-del:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-placement-h:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-placement-v:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-addvalue:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-insertvalue.fc_after:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-insertvalue.fc_before:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-delvalue:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-enablevalue:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-disablevalue:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-clearvalue:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-selectvalue:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-uploadvalue:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-button:not(.fcfont-icon):hover,
#flexicontent .fc-xpended-btns .fcfield-button-add:not(.fcfont-icon):hover a {
	background-color: #e0e0e0;
}
#flexicontent .fc-xpended-btns .fcfield-expand-view.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-drag-handle.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-list-add.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-list-del.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-placement-h.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-placement-v.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-addvalue.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-insertvalue.fc_after.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-insertvalue.fc_before.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-delvalue.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-enablevalue.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-disablevalue.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-clearvalue.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-selectvalue.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-uploadvalue.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-button.fcfont-icon:hover,
#flexicontent .fc-xpended-btns .fcfield-button-add.fcfont-icon:hover a {
	background-color: #f0f0f0;
	background-image: -webkit-linear-gradient(top,#f0f0f0,#c0c0c0);
	background-image: linear-gradient(to bottom,#f0f0f0,#c0c0c0);
}
#flexicontent span.fcfield-expand-view.fcfont-icon,
#flexicontent span.fcfield-drag-handle.fcfont-icon,
#flexicontent span.fcfield-list-add.fcfont-icon,
#flexicontent span.fcfield-list-del.fcfont-icon,
#flexicontent span.fcfield-placement-h.fcfont-icon,
#flexicontent span.fcfield-placement-v.fcfont-icon,
#flexicontent span.fcfield-addvalue.fcfont-icon,
#flexicontent span.fcfield-insertvalue.fc_after.fcfont-icon,
#flexicontent span.fcfield-insertvalue.fc_before.fcfont-icon,
#flexicontent span.fcfield-delvalue.fcfont-icon,
#flexicontent span.fcfield-enablevalue.fcfont-icon,
#flexicontent span.fcfield-disablevalue.fcfont-icon,
#flexicontent span.fcfield-clearvalue.fcfont-icon,
#flexicontent span.fcfield-selectvalue.fcfont-icon,
#flexicontent span.fcfield-uploadvalue.fcfont-icon,
#flexicontent span.fcfield-button.fcfont-icon,
#flexicontent span.fcfield-button-add.fcfont-icon a {
	padding: 4px 12px;
	background-image: none;
}
#flexicontent span.fcfield-expand-view.fcfont-icon {
	padding: 0px;
}
#flexicontent .fcfield-button-add {
	vertical-align: top !important;
	float: none !important;
	margin: 0px !important;
	padding: 0px !important;
}
#flexicontent .fcfield-button-add a {
	padding: 6px 8px;
	margin: 0px 2px 0px 6px;
	text-decoration: none !important;
	background-color: white !important;
	color: gray !important;
}
#flexicontent .fcfield-button-add:hover a {
	background-color: darkgreen !important;
	color: white !important;
	border: 1px solid transparent !important;
}
#flexicontent input.fcfield-addvalue {
	padding: 5px 12px 6px;
	margin: 4px 2px 0px 6px;
}
#flexicontent span.fcfield-addvalue {
	margin: 0px 2px 6px 6px;
	padding: 6px 28px;
	background: url(../images/plus-button.png) 8% 50% no-repeat;
}
#flexicontent span.fcfield-addvalue:not(.fcfont-icon) {
	padding: 6px 12px 6px 32px !important;
}
#flexicontent span.fcfield-addvalue.fcfont-icon:before {
	padding: 0 6px 0 2px;
	content: "*";
}
#flexicontent span.fcfield-addvalue:before {
	color: LimeGreen;
}
#flexicontent .fcfield-addvalue.fccleared {
	clear: both !important;
	float: left !important;
}
#flexicontent .fcfield-list-add,
#flexicontent .fcfield-list-del,
#flexicontent .fcfield-placement-h,
#flexicontent .fcfield-placement-v {
	margin: 0 4px 6px 0;
	padding: 16px;
}
#flexicontent .fcfield-placement-h {
	background: url(../images/arrow-resize.png) 8px 8px no-repeat white;
}
#flexicontent .fcfield-placement-v {
	background: url(../images/arrow-resize-090.png) 8px 8px no-repeat white;
}
#flexicontent .fcfield-placement-h.fc_toggle,
#flexicontent .fcfield-placement-v.fc_toggle {
	background: url(../images/arrow-in-out.png) 8px 8px no-repeat white;
}
#flexicontent .fcfield-list-add.fc_vertical {
	background: url(../images/list_add_v.png) 8px 8px no-repeat white;
}
#flexicontent .fcfield-list-del.fc_vertical {
	background: url(../images/list_del_v.png) 8px 8px no-repeat white;
}
#flexicontent .fcfield-list-add.fc_horizontal {
	background: url(../images/list_add_h.png) 8px 8px no-repeat white;
}
#flexicontent .fcfield-list-del.fc_horizontal {
	background: url(../images/list_del_h.png) 8px 8px no-repeat white;
}
/* ... */

